feat:完善策略接口
