# wafconsole/openapi.yaml
@@ -3,8 +3,265 @@
 
 openapi: 3.0.3
 info:
-    title: ""
+    title: Strategy API
     version: 0.0.1
-paths: {}
+paths:
+    /app/wafTop/v1/strategies:
+        get:
+            tags:
+                - Strategy
+            operationId: Strategy_ListStrategy
+            parameters:
+                - name: name
+                  in: query
+                  schema:
+                    type: string
+                - name: status
+                  in: query
+                  schema:
+                    type: string
+                - name: pageNow
+                  in: query
+                  schema:
+                    type: string
+                - name: pageSize
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/ListStrategyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /app/wafTop/v1/strategy:
+        post:
+            tags:
+                - Strategy
+            operationId: Strategy_CreateStrategy
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/CreateStrategyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/CreateStrategyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        delete:
+            tags:
+                - Strategy
+            operationId: Strategy_DeleteStrategy
+            parameters:
+                - name: ids
+                  in: query
+                  schema:
+                    type: array
+                    items:
+                        type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/DeleteStrategyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+        patch:
+            tags:
+                - Strategy
+            operationId: Strategy_UpdateStrategy
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/UpdateStrategyRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/UpdateStrategyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
+    /app/wafTop/v1/strategy/{id}:
+        get:
+            tags:
+                - Strategy
+            operationId: Strategy_GetStrategy
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/GetStrategyReply'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
 components:
-    schemas: {}
+    schemas:
+        CreateStrategyReply:
+            type: object
+            properties: {}
+        CreateStrategyRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                status:
+                    type: string
+                action:
+                    type: string
+                nextAction:
+                    type: string
+                groupId:
+                    type: array
+                    items:
+                        type: string
+        DeleteStrategyReply:
+            type: object
+            properties: {}
+        GetStrategyReply:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                status:
+                    type: string
+                action:
+                    type: string
+                nextAction:
+                    type: string
+                ruleGroupInfos:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/RuleGroupInfo'
+        GoogleProtobufAny:
+            type: object
+            properties:
+                '@type':
+                    type: string
+                    description: The type of the serialized message.
+            additionalProperties: true
+            description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListStrategyReply:
+            type: object
+            properties:
+                total:
+                    type: string
+                strategies:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/StrategyInfo'
+        RuleGroupInfo:
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                description:
+                    type: string
+                isBuildin:
+                    type: string
+                createdAt:
+                    type: string
+                updatedAt:
+                    type: string
+        Status:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    description: The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code].
+                    format: int32
+                message:
+                    type: string
+                    description: A developer-facing error message, which should be in English. Any user-facing error message should be localized and sent in the [google.rpc.Status.details][google.rpc.Status.details] field, or localized by the client.
+                details:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/GoogleProtobufAny'
+                    description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
+            description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
+        StrategyInfo:
+            type: object
+            properties:
+                id:
+                    type: string
+                status:
+                    type: string
+                action:
+                    type: string
+                nextAction:
+                    type: string
+                name:
+                    type: string
+                description:
+                    type: string
+        UpdateStrategyReply:
+            type: object
+            properties: {}
+        UpdateStrategyRequest:
+            type: object
+            properties:
+                name:
+                    type: string
+                description:
+                    type: string
+                status:
+                    type: string
+                action:
+                    type: string
+                nextAction:
+                    type: string
+                groupId:
+                    type: array
+                    items:
+                        type: string
+                id:
+                    type: string
+tags:
+    - name: Strategy
